# traces

./: .gitignore  Makefile.am  README  ccwrap.py  ldwrap.py
demo/: Makefile
libtrace/: Makefile.am  trace_user.c
trace_dumper/: Makefile.am  trace_dumper.c
trace_instrumentor/: Makefile.am  TraceCall.h  trace_instrumentor.cpp
trace_reader/: Makefile.am
